<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NotesApplication</string>

    <string name="add_note">Add note</string>
    <string name="new_note">New note</string>
    <string name="description">Description:</string>
    <string name="field_not_be_empty_error">This note title cannot be empty.</string>
    <string name="save_button">Save</string>
    <string name="title">Title</string>
    <string name="title_colon">Title:</string>
    <string name="welcome_message">We do not have notes.</string>
    <string name="selected_count_plural">%d notes selected</string>
    <string name="selected_count_singular">1 note selected</string>

</resources>
